welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Maths
	Maths.abs(100-n)<=10 || Maths.abs(200-n)<=10
        ^