welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	Maths.abs(100-n)<=10 || Maths.abs(200-n)<=10
}

